<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#070707"
    tools:context=".CalculatorActivity">

    <Button
        android:id="@+id/button8"
        android:layout_width="103dp"
        android:layout_height="80dp"
        android:insetLeft="2dp"
        android:insetTop="2dp"
        android:insetRight="2dp"
        android:insetBottom="2dp"
        android:text="@string/button8"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button7" />

    <Button
        android:id="@+id/button7"
        android:layout_width="103dp"
        android:layout_height="80dp"
        android:insetLeft="2dp"
        android:insetTop="2dp"
        android:insetRight="2dp"
        android:insetBottom="2dp"
        android:text="@string/button7"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_a"
        android:layout_width="103dp"
        android:layout_height="80dp"
        android:insetLeft="2dp"
        android:insetTop="2dp"
        android:insetRight="2dp"
        android:insetBottom="2dp"
        android:text="@string/button_a"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="#D46E00"
        app:layout_constraintBottom_toBottomOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button9" />

    <Button
        android:id="@+id/button9"
        android:layout_width="103dp"
        android:layout_height="80dp"
        android:insetLeft="2dp"
        android:insetTop="2dp"
        android:insetRight="2dp"
        android:insetBottom="2dp"
        android:text="@string/button9"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/button_a"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button8" />

    <Button
        android:id="@+id/button_b"
        android:layout_width="103dp"
        android:layout_height="80dp"
        android:insetLeft="2dp"
        android:insetTop="2dp"
        android:insetRight="2dp"
        android:insetBottom="2dp"
        android:text="@string/button_b"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="#D46E00"
        app:layout_constraintBottom_toBottomOf="@+id/button_pc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_pc" />

    <Button
        android:id="@+id/button6"
        android:layout_width="103dp"
        android:layout_height="80dp"
        android:insetLeft="2dp"
        android:insetTop="2dp"
        android:insetRight="2dp"
        android:insetBottom="2dp"
        android:text="@string/button6"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button_s"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button5" />

    <Button
        android:id="@+id/button5"
        android:layout_width="103dp"
        android:layout_height="80dp"
        android:insetLeft="2dp"
        android:insetTop="2dp"
        android:insetRight="2dp"
        android:insetBottom="2dp"
        android:text="@string/button5"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button4" />

    <Button
        android:id="@+id/button_s"
        android:layout_width="103dp"
        android:layout_height="80dp"
        android:insetLeft="2dp"
        android:insetTop="2dp"
        android:insetRight="2dp"
        android:insetBottom="2dp"
        android:text="@string/button_s"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="#D46E00"
        app:layout_constraintBottom_toBottomOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button6" />

    <Button
        android:id="@+id/button4"
        android:layout_width="103dp"
        android:layout_height="80dp"
        android:insetLeft="2dp"
        android:insetTop="2dp"
        android:insetRight="2dp"
        android:insetBottom="2dp"
        android:text="@string/button4"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="103dp"
        android:layout_height="80dp"
        android:insetLeft="2dp"
        android:insetTop="2dp"
        android:insetRight="2dp"
        android:insetBottom="2dp"
        android:text="@string/button3"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button_m"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2" />

    <Button
        android:id="@+id/button_m"
        android:layout_width="103dp"
        android:layout_height="80dp"
        android:insetLeft="2dp"
        android:insetTop="2dp"
        android:insetRight="2dp"
        android:insetBottom="2dp"
        android:text="@string/button_m"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="#D46E00"
        app:layout_constraintBottom_toBottomOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button3" />

    <Button
        android:id="@+id/button1"
        android:layout_width="103dp"
        android:layout_height="80dp"
        android:insetLeft="2dp"
        android:insetTop="2dp"
        android:insetRight="2dp"
        android:insetBottom="2dp"
        android:text="@string/button1"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="103dp"
        android:layout_height="80dp"
        android:insetLeft="2dp"
        android:insetTop="2dp"
        android:insetRight="2dp"
        android:insetBottom="2dp"
        android:text="@string/button2"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button1" />

    <Button
        android:id="@+id/button0"
        android:layout_width="103dp"
        android:layout_height="80dp"
        android:layout_marginBottom="6dp"
        android:insetLeft="2dp"
        android:insetTop="2dp"
        android:insetRight="2dp"
        android:insetBottom="2dp"
        android:text="@string/button0"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_pw"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_d"
        android:layout_width="103dp"
        android:layout_height="80dp"
        android:insetLeft="2dp"
        android:insetTop="2dp"
        android:insetRight="2dp"
        android:insetBottom="2dp"
        android:text="@string/button_d"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/button_pw"
        app:layout_constraintEnd_toStartOf="@+id/button_eq"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_pw" />

    <Button
        android:id="@+id/button_eq"
        android:layout_width="103dp"
        android:layout_height="80dp"
        android:insetLeft="2dp"
        android:insetTop="2dp"
        android:insetRight="2dp"
        android:insetBottom="2dp"
        android:text="@string/button_eq"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="#D46E00"
        app:layout_constraintBottom_toBottomOf="@+id/button_d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_d" />

    <Button
        android:id="@+id/button_c"
        android:layout_width="103dp"
        android:layout_height="80dp"
        android:insetLeft="2dp"
        android:insetTop="2dp"
        android:insetRight="2dp"
        android:insetBottom="2dp"
        android:text="@string/button_c"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="#D46E00"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button_po"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_po"
        android:layout_width="103dp"
        android:layout_height="80dp"
        android:insetLeft="2dp"
        android:insetTop="2dp"
        android:insetRight="2dp"
        android:insetBottom="2dp"
        android:text="@string/button_po"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="#D46E00"
        app:layout_constraintBottom_toBottomOf="@+id/button_c"
        app:layout_constraintEnd_toStartOf="@+id/button_pc"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_c" />

    <Button
        android:id="@+id/button_pc"
        android:layout_width="103dp"
        android:layout_height="80dp"
        android:insetLeft="2dp"
        android:insetTop="2dp"
        android:insetRight="2dp"
        android:insetBottom="2dp"
        android:text="@string/button_pc"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="#D46E00"
        app:layout_constraintBottom_toBottomOf="@+id/button_po"
        app:layout_constraintEnd_toStartOf="@+id/button_b"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_po" />

    <Button
        android:id="@+id/button_pw"
        android:layout_width="103dp"
        android:layout_height="80dp"
        android:insetLeft="2dp"
        android:insetTop="2dp"
        android:insetRight="2dp"
        android:insetBottom="2dp"
        android:text="@string/button_pw"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/button_d"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button0" />

    <TextView
        android:id="@+id/expression"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:gravity="end"
        android:hint="@string/initial_expression"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:gravity="end"
        android:text="@string/initial_result"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/button_b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expression" />

</androidx.constraintlayout.widget.ConstraintLayout>